2001-10-12  Mikael Djurfeldt  <mdj@linnaeus>

	* debug.c (scm_mem_to_proc): Fixed typo in previous change.

	* validate.h (SCM_VALIDATE_DOUBLE_DEF_COPY): New macro.

2001-10-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* print.c (scm_print_state_vtable, print_state_pool):
	Initialize.  These variables are now registered as gc roots.

	(scm_current_pstate):  Update documentation.

	(scm_current_pstate, scm_make_print_state, scm_free_print_state,
	scm_prin1, scm_init_print):  print_state_pool is registered as a
	gc root and thus does not need to be protected by a surrounding
	pair any more.

	(make_print_state):  The car of print_state_pool no longer holds
	the scm_print_state_vtable.

	(scm_current_pstate, scm_make_print_state, print_circref,
	scm_iprin1, scm_prin1, scm_iprlist):  Prefer !SCM_<foo> over
	SCM_N<foo>.

	(scm_prin1):  When building lists, prefer scm_list_<n> over
	scm_cons[2]?.

	(scm_iprlist):  Removed a redundant SCM_IMP test.

	(scm_simple_format):  Use SCM_EQ_P to compare SCM values.

2001-10-11  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* debug.c (scm_make_iloc):  Prefer !SCM_<foo> over SCM_N<foo>.

	(scm_memcons, scm_mem_to_proc):  When building lists, prefer
	scm_list_<n> over scm_cons[2]?.

	(scm_mem_to_proc):  Prefer SCM_CONSP over SCM_NIMP.

	(scm_procedure_name):  Use SCM_CADR instead of explicit form.

	(debugobj_print):  Coerce scm_intprint arg 1 to long, not int.
	Thanks to Rob Browning for the patch (see log entry 2001-09-21) -
	for some reason his patch didn't make it into the cvs.

2001-10-09  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (mem2decimal_from_point):  Cleaned up the parsing a
	little bit - should even be somewhat more accurate now.

2001-10-08  Rob Browning  <rlb@defaultvalue.org>

	* gc.c: support ia64 register backing store.
	(SCM_MARK_BACKING_STORE): new macro.

	* continuations.h: support ia64 register backing store.
	(struct scm_t_contregs): add ia64 register backing store.
